--- a/.github/workflows/Deploy_API.yml
+++ b/.github/workflows/Deploy_API.yml
@@ -15,7 +15,7 @@ jobs:
         submodules: recursive
     - name: Deploy to APIGateway
       run: |
-          $fileDirectory = ".\openapi-files\api\";
+          $fileDirectory = ".\workspace\apis\";
           $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
           $headers.Add("Content-Type", "text/plain")
           foreach($file in Get-ChildItem $fileDirectory -Name)
