--- a/.github/workflows/Deploy_API.yml
+++ b/.github/workflows/Deploy_API.yml
@@ -7,7 +7,7 @@ on:
       - main
 jobs:
   Deploy_API:
-    runs-on: [self-hosted,Windows]
+    runs-on: [self-hosted, macOS]
     steps:
     - name: checkout
       uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
           }
   Run_Test:
     needs: Deploy_API
-    runs-on: [self-hosted,Windows]
+    runs-on: [self-hosted, macOS]
     steps:
     - name: Running Tests
       run: |
