--- a/.github/workflows/Deploy_API.yml
+++ b/.github/workflows/Deploy_API.yml
@@ -15,6 +15,8 @@ jobs:
         submodules: recursive
     - name: Deploy to APIGateway
       run: |
+        pwd
+        for file in ../workspace/apis/*; do echo $file ; done
         for file in ../workspace/apis/*; do curl -i -X POST -H "Content-Type: text/plain" --data-binary @$file http://localhost:8080/deploy; done
   Run_Test:
     needs: Deploy_API
