--- a/.github/workflows/Deploy_API.yml
+++ b/.github/workflows/Deploy_API.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Deploy to APIGateway
       run: |
         pwd
-        for file in ./../../../workspace/apis/*; do echo $file ; done
-        for file in ./../../../workspace/apis/*; do curl -i -X POST -H "Content-Type: text/plain" --data-binary @$file http://localhost:8080/deploy; done
+        for file in ./workspace/apis/*; do echo $file ; done
+        for file in ./workspace/apis/*; do curl -i -X POST -H "Content-Type: text/plain" --data-binary @$file http://localhost:8080/deploy; done
   Run_Test:
     needs: Deploy_API
     runs-on: [self-hosted, macOS]
@@ -25,7 +25,7 @@ jobs:
     - name: Running Tests
       run: |
         pwd
-        cd ./../../../../api-studio-demo/apistudio
+        cd /Users/przemek/Code/api-studio-demo/apistudio
         pwd
         ./gradlew test
     - name: Upload test report
